refactor: 방어적 복사 변경